BJS2-65023 refactoring v2.